--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MomHelper",
+  "name": "mom-helper",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/stack": "^7.0.0",
+    "@types/styled-components-react-native": "^5.2.5",
+    "axios": "^1.7.7",
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.0.7",
     "react": "18.3.1",
-    "react-native": "0.76.1"
+    "react-native": "0.76.1",
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.0.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
